# ILTD-Player

./: .gitignore  CMakeLists.txt  README.md  media.cpp  media.h
include/vlc/: libvlc_media_player.h
lib/: libvlc.exp  libvlccore.exp
